--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -97,5 +97,64 @@ main.main {
     border-top: 1px solid #32323D;
     border-bottom: 1px solid #32323D;
     background-color: var(--bg-color);
+    position: relative;
+}
+
+.navbar-brand {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.navbar-brand img {
+    max-width: 58px;
+    transition: all .3s;
+}
+
+.navbar-brand:hover img {
+    filter: drop-shadow(0 0 10px #fff);
+}
+
+.header .navbar-nav {
+    gap: 35px;
+}
+
+.header .navbar-nav .nav-link {
+    color: var(--text-color);
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: uppercase;
+    transition: color .3s;
+    padding: 0;
+}
+
+.header .navbar-nav .nav-link.active,
+.header .navbar-nav .nav-link:hover {
+    color: var(--accent-color);
+}
+
+.header-icons {
+    font-size: 25px;
+    display: flex;
+    gap: 30px;
+}
+
+.header-icons .list-inline-item {
+    margin: 0;
+}
+
+.header-icons li {
+    position: relative;
+}
+
+.header-icons li a span>span {
+    position: absolute;
+    top: 0;
+    right: -3px;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: var(--accent-color);
 }
 /* Header*/
