--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -137,7 +137,7 @@ main.main {
 .header-icons {
     font-size: 25px;
     display: flex;
-    gap: 30px;
+    gap: 10px;
 }
 
 .header-icons .list-inline-item {
@@ -158,3 +158,9 @@ main.main {
     background-color: var(--accent-color);
 }
 /* Header*/
+
+@media only screen and (max-width: 768px) {
+    .header nav {
+        padding: 15px 0;
+    }
+}
