--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -209,8 +209,26 @@ main.main {
 }
 /* Hero section*/
 
+@media only screen and (max-width: 992px) {
+    .hero-section {
+        padding: 100px 0;
+    }
+
+    .hero-section-content h1 {
+        font-size: 40px;
+    }
+}
+
 @media only screen and (max-width: 768px) {
     .header nav {
         padding: 15px 0;
+    }
+
+    .hero-section-content h1 {
+        font-size: 30px;
+    }
+
+    .hero-section-content p {
+        font-size: 16px;
     }
 }
