--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -42,6 +42,7 @@
     --accent-color: #C7A17A;
     --accent-color2: #A4815E;
     --grey-color: #DFDFDF;
+    --dark-color: #14141D;
 }
 
 html,
@@ -209,6 +210,55 @@ main.main {
 }
 /* Hero section*/
 
+/* Banner section*/
+.banner-section {
+    margin: 80px 0;
+}
+
+.banner-section-img {
+    position: relative;
+}
+
+.banner-section-img::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 2;
+}
+
+.banner-section-img img {
+    object-fit: cover;
+    object-position: right top;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px 0 0 10px;
+}
+
+
+.banner-section-content {
+    background-color: var(--dark-color);
+    padding: 30px;
+    border-radius: 0 10px 10px 0;
+}
+
+
+.banner-section-content h3 {
+    font-size: 24px;
+    font-weight: 900;
+    text-transform: uppercase;
+    margin-bottom: 15px;
+}
+
+.banner-section-content p {
+    color: var(--grey-color);
+    font-size: 18px;
+}
+/* Banner section*/
+
 @media only screen and (max-width: 992px) {
     .hero-section {
         padding: 100px 0;
@@ -216,6 +266,18 @@ main.main {
 
     .hero-section-content h1 {
         font-size: 40px;
+    }
+
+    .banner-section {
+        margin: 40px 0;
+    }
+
+    .banner-section-img img {
+        border-radius: 10px 10px 0 0;
+    }
+    
+    .banner-section-content {
+        border-radius: 0 0 10px 10px;
     }
 }
 
