--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -43,6 +43,7 @@
     --accent-color2: #A4815E;
     --grey-color: #DFDFDF;
     --dark-color: #14141D;
+    --darken-color: #22222F;
 }
 
 html,
@@ -82,6 +83,10 @@ a.active {
 
 main.main {
     flex: 1 1 auto;
+}
+
+section {
+    margin-bottom: 80px;
 }
 
 .btn-warning {
@@ -211,10 +216,6 @@ main.main {
 /* Hero section*/
 
 /* Banner section*/
-.banner-section {
-    margin: 80px 0;
-}
-
 .banner-section-img {
     position: relative;
 }
@@ -238,7 +239,6 @@ main.main {
     border-radius: 10px 0 0 10px;
 }
 
-
 .banner-section-content {
     background-color: var(--dark-color);
     padding: 30px;
@@ -258,6 +258,62 @@ main.main {
     font-size: 18px;
 }
 /* Banner section*/
+
+/* Catalog section*/
+.h-title {
+    font-size: 40px;
+    font-weight: 900;
+    line-height: 1.44;
+    margin-bottom: 40px;
+    text-transform: uppercase;
+}
+
+.product-card {
+    background-color: var(--dark-color);
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color .3s;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.product-card:hover{
+    background-color: var(--darken-color);
+}
+
+.product-card-content h3 {
+    font-size: 24px;
+    font-weight: 900;
+    text-transform: uppercase;
+    margin-top: 42px;
+}
+
+.product-card-content h3 a {
+    height: 60px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+
+.product-card-details {
+    font-size: 18px;
+}
+
+.product-card-details small {
+    color: #818181;
+    text-decoration: line-through;
+    margin-left: 10px;
+}
+
+.product-actions span {
+    font-size: 25px;
+}
+
+.add2favorite {
+    margin-right: 10px;
+}
+/* Catalog section*/
 
 @media only screen and (max-width: 992px) {
     .hero-section {
@@ -282,6 +338,10 @@ main.main {
 }
 
 @media only screen and (max-width: 768px) {
+    section {
+        margin-bottom: 40px;
+    }
+
     .header nav {
         padding: 15px 0;
     }
@@ -292,5 +352,9 @@ main.main {
 
     .hero-section-content p {
         font-size: 16px;
+    }
+
+    .h-title {
+        margin-bottom: 20px;
     }
 }
