--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -345,6 +345,37 @@ section {
 }
 /* News section*/
 
+/* Footer */
+.footer {
+    border-top: 2px solid var(--dark-color);
+    padding: 80px 0;
+}
+
+.footer-logo {
+    text-transform: uppercase;
+    color: #F8DABF;
+    font-size: 20px;
+    font-weight: 900;
+}
+
+.footer-logo img{
+    max-height: 80px;
+    transition: all .3s;
+}
+
+.footer-logo:hover img {
+    filter: drop-shadow(0 0 10px #fff);
+}
+
+.footer-menu li {
+    font-weight: 600;
+    font-size: 15px;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+/* Footer */
+
 @media only screen and (max-width: 992px) {
     .hero-section {
         padding: 100px 0;
@@ -386,5 +417,14 @@ section {
 
     .h-title {
         margin-bottom: 20px;
+    }
+
+    .footer-logo-inner {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+
+    .footer .row>div:last-child {
+        text-align: right;
     }
 }
