--- a/assets/icons/style.css
+++ b/assets/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?iknbsp');
-  src:  url('fonts/icomoon.eot?iknbsp#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?iknbsp') format('truetype'),
-    url('fonts/icomoon.woff?iknbsp') format('woff'),
-    url('fonts/icomoon.svg?iknbsp#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?i5fpsn');
+  src:  url('fonts/icomoon.eot?i5fpsn#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?i5fpsn') format('truetype'),
+    url('fonts/icomoon.woff?i5fpsn') format('woff'),
+    url('fonts/icomoon.svg?i5fpsn#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-trash:before {
+  content: "\e903";
+}
 .icon-cart:before {
   content: "\e900";
 }
